# mapgmu

./: CMakeLists.txt  CloudRegister.cpp  CubeAligner.hpp  DoNFilter.hpp  DonEstimator.hpp  LUM.cpp  MyHdlGrabber.cpp  MyHdlGrabber.h  MyMeshBuilder.h  PcapDump.cpp  SimplePCDViewer.cpp  Transformer.hpp  mapgmuutils.hpp  run
MapGmuResults/: Art-clockwise-fast_cgi.mat  Art-clockwise-fast_ci.mat  Art-clockwise-fast_gi.mat  Art-clockwise_cgi.mat  Art-clockwise_ci.mat  Art-clockwise_gi.mat  Art-counter-fast_cgi.mat  Art-counter-fast_ci.mat  Art-counter-fast_gi.mat  Art-counter_cgi.mat  Art-counter_ci.mat  Art-counter_gi.mat  Enterprise-clockwise_cgi.mat  Enterprise-clockwise_ci.mat  Enterprise-clockwise_gi.mat  Enterprise-counter_cgi.mat  Enterprise-counter_ci.mat  Enterprise-counter_gi.mat  Research-clockwise-fast_cgi.mat  Research-clockwise-fast_ci.mat  Research-clockwise-fast_gi.mat  Research-clockwise_cgi.mat  Research-clockwise_ci.mat  Research-clockwise_gi.mat  Research-counter-fast_cgi.mat  Research-counter-fast_ci.mat  Research-counter-fast_gi.mat  Research-counter_cgi.mat  Research-counter_ci.mat  Research-counter_gi.mat
